# PyMenager

./: .replit  main.py  pyproject.toml  readme.md
installer/: pymen
v1/: main.py  readme.md
v1/installer/: install.py  pymen
v1/upgrade/: upgrade.py
v2/: main.py
